Add banner mobile support

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,4 +1,4 @@
-<section class="banner">
+<section class="banner screen-height">
     <header>
         <img src="assets/netflixlogo.png" alt="">
         <button>Sign In</button>
