--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,5 +1,4 @@
 .banner {
-    height: 100vh;
     width: 100%;
     background-image: url("/assets/netflixbanner.jpg");
     background-color: #000;
@@ -68,6 +67,7 @@ header button:active {
     align-items: center;
     gap: 20px;
     padding-top: 140px;
+    text-align: center;
 }
 
 h1 {
@@ -125,4 +125,59 @@ form div button:hover {
 
 form div button:active {
     background-color: rgb(153, 22, 29);
+}
+
+@media (max-width: 1000px) {
+    header {
+        max-width: 90%;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    h5 {
+        font-size: 1.1rem;
+    }
+    
+    form {
+        font-size: 1rem;
+    }
+
+    form div button {
+        width: 40%;
+    }
+}
+
+@media (max-width: 600px) {
+    .banner {
+        padding: 0 40px;
+    }
+
+    header img {
+        width: 20%;
+    }
+
+    form div {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    form div button {
+        width: auto;
+        font-size: 1rem;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    form div input {
+        padding: 16px;
+        width: 100%;
+    }    
+}
+
+@media (max-width: 450px) {
+    header img {
+        width: 30%;
+    }
 }
