--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-banner></app-banner>
+<main>
+    <app-banner></app-banner>
+    @for (feature of featureData; track feature.id) {
+        <app-feature [featureData]="feature"></app-feature>
+    }
+</main>
