--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 * {
     box-sizing: border-box;
-	font-family: Montserrat, 'Times New Roman', Times, serif
+	font-family: Montserrat, 'Times New Roman', Times, serif;
 }
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
