--- a/src/app/feature/feature.component.css
+++ b/src/app/feature/feature.component.css
@@ -32,3 +32,37 @@ section h3 {
     line-height: 2rem;
     font-weight: 500;
 }
+
+.column {
+    flex-direction: column;
+}
+
+@media (max-width: 950px) {
+    section {
+        flex-direction: column;
+        padding: 50px 100px;
+    }
+
+    section div:first-child {
+        width: 100%;
+        text-align: center;
+    }
+
+    section .img-container {
+        width: 100%;
+    }
+
+    section h1 {
+        font-size: 2rem;
+    }
+
+    section h3 {
+        font-size: 1.2rem;
+    }
+}
+
+@media (max-width: 450px) {
+    section {
+        padding: 50px 30px;
+    }
+}
