--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,11 +1,27 @@
-<section [ngStyle]="{'flex-direction': featureData?.swapPositions ? 'row-reverse' : 'row'}">
-    <div>
-        <h1>{{ featureData?.header }}</h1>
-        <h3>{{ featureData?.description }}</h3>
-    </div>
-    <div class="img-container">
-        @if (featureData?.imgUrl) {
-            <img [src]="featureData?.imgUrl" [alt]="featureData?.imgAlt">
-        }
-    </div>
-</section>
+@if (windowSize > 950) {
+    <section [ngStyle]="{'flex-direction': featureData?.swapPositions && windowSize > 950 ? 'row-reverse' : 'row'}">
+        <div>
+            <h1>{{ featureData?.header }}</h1>
+            <h3>{{ featureData?.description }}</h3>
+        </div>
+        <div class="img-container">
+            @if (featureData?.imgUrl) {
+                <img [src]="featureData?.imgUrl" [alt]="featureData?.imgAlt">
+            }
+        </div>
+    </section> 
+}
+
+@if (windowSize <= 950) {
+    <section class="column">
+        <div>
+            <h1>{{ featureData?.header }}</h1>
+            <h3>{{ featureData?.description }}</h3>
+        </div>
+        <div class="img-container">
+            @if (featureData?.imgUrl) {
+                <img [src]="featureData?.imgUrl" [alt]="featureData?.imgAlt">
+            }
+        </div>
+    </section> 
+}
