Add questions elements and components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
     @for (feature of featureData; track feature.id) {
         <app-feature [featureData]="feature"></app-feature>
     }
+    <app-questions></app-questions>
 </main>
