Add footer component and elements

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
         <app-feature [featureData]="feature"></app-feature>
     }
     <app-questions></app-questions>
+    <app-footer></app-footer>
 </main>
